@@ -176,6 +176,17 @@ Section "!Minimal install" SEC01
   File "..\..\..\local\themes\Tiny\theme.cfg"
   File "..\..\..\local\themes\Tiny\wool-lorindol.png"
   File "..\..\..\local\themes\Tiny\wool-port.png"
+  SetOutPath "$INSTDIR\themes\Wesnoth-like"
+  File "..\..\..\local\themes\Wesnoth-like\board.png"
+  File "..\..\..\local\themes\Wesnoth-like\desert.png"
+  File "..\..\..\local\themes\Wesnoth-like\field.png"
+  File "..\..\..\local\themes\Wesnoth-like\forest.png"
+  File "..\..\..\local\themes\Wesnoth-like\gold.png"
+  File "..\..\..\local\themes\Wesnoth-like\hill.png"
+  File "..\..\..\local\themes\Wesnoth-like\mountain.png"
+  File "..\..\..\local\themes\Wesnoth-like\pasture.png"
+  File "..\..\..\local\themes\Wesnoth-like\sea.png"
+  File "..\..\..\local\themes\Wesnoth-like\theme.cfg"
 
 ; Shortcuts
   SetOutPath "$INSTDIR"
@@ -285,6 +296,16 @@ Section Uninstall
   Delete "$INSTDIR\themes\desert.png"
   Delete "$INSTDIR\themes\cross.png"
   Delete "$INSTDIR\themes\board.png"
+  Delete "$INSTDIR\themes\Wesnoth-like\theme.cfg"
+  Delete "$INSTDIR\themes\Wesnoth-like\sea.png"
+  Delete "$INSTDIR\themes\Wesnoth-like\pasture.png"
+  Delete "$INSTDIR\themes\Wesnoth-like\mountain.png"
+  Delete "$INSTDIR\themes\Wesnoth-like\hill.png"
+  Delete "$INSTDIR\themes\Wesnoth-like\gold.png"
+  Delete "$INSTDIR\themes\Wesnoth-like\forest.png"
+  Delete "$INSTDIR\themes\Wesnoth-like\field.png"
+  Delete "$INSTDIR\themes\Wesnoth-like\desert.png"
+  Delete "$INSTDIR\themes\Wesnoth-like\board.png"
   Delete "$INSTDIR\themes\Tiny\wool-port.png"
   Delete "$INSTDIR\themes\Tiny\wool-lorindol.png"
   Delete "$INSTDIR\themes\Tiny\theme.cfg"
@@ -373,6 +394,7 @@ Section Uninstall
   Delete "$SMPROGRAMS\$ICONS_GROUP\Pioneers Editor.lnk"
 
   RMDir "$SMPROGRAMS\$ICONS_GROUP"
+  RMDir "$INSTDIR\themes\Wesnoth-like"
   RMDir "$INSTDIR\themes\Tiny"
   RMDir "$INSTDIR\themes\Iceland"
   RMDir "$INSTDIR\themes\FreeCIV-like"
